compiler_v1/min-caml/myParser.output
   0  $accept : %entry% $end

   1  simple_exp : LPAREN exp RPAREN
   2             | LPAREN RPAREN
   3             | BOOL
   4             | INT
   5             | FLOAT
   6             | IDENT
   7             | simple_exp DOT LPAREN exp RPAREN

   8  exp : simple_exp
   9      | NOT exp
  10      | MINUS exp
  11      | exp PLUS exp
  12      | exp MINUS exp
  13      | exp AST INT
  14      | exp SLASH INT
  15      | exp EQUAL exp
  16      | exp LESS_GREATER exp
  17      | exp LESS exp
  18      | exp GREATER exp
  19      | exp LESS_EQUAL exp
  20      | exp GREATER_EQUAL exp
  21      | IF exp THEN exp ELSE exp
  22      | MINUS_DOT exp
  23      | exp PLUS_DOT exp
  24      | exp MINUS_DOT exp
  25      | exp AST_DOT exp
  26      | exp SLASH_DOT exp
  27      | LET IDENT EQUAL exp IN exp
  28      | LET REC fundef IN exp
  29      | FUN formal_args RARROW exp
  30      | simple_exp actual_args
  31      | elems
  32      | LET LPAREN pat RPAREN EQUAL exp IN exp
  33      | simple_exp DOT LPAREN exp RPAREN LESS_MINUS exp
  34      | exp SEMICOLON exp
  35      | ARRAY_CREATE simple_exp simple_exp
  36      | error

  37  fundef : IDENT formal_args EQUAL exp

  38  formal_args : IDENT formal_args
  39              | IDENT

  40  actual_args : actual_args simple_exp
  41              | simple_exp

  42  elems : elems COMMA exp
  43        | exp COMMA exp

  44  pat : pat COMMA IDENT
  45      | IDENT COMMA IDENT

  46  %entry% : '\001' exp

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . exp  (46)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 16
	simple_exp  goto 17
	elems  goto 18


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	exp : error .  (36)

	.  reduce 36


state 4
	simple_exp : BOOL .  (3)

	.  reduce 3


state 5
	simple_exp : INT .  (4)

	.  reduce 4


state 6
	simple_exp : FLOAT .  (5)

	.  reduce 5


state 7
	exp : NOT . exp  (9)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 19
	simple_exp  goto 17
	elems  goto 18


state 8
	exp : MINUS . exp  (10)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 20
	simple_exp  goto 17
	elems  goto 18


state 9
	exp : MINUS_DOT . exp  (22)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 21
	simple_exp  goto 17
	elems  goto 18


state 10
	exp : IF . exp THEN exp ELSE exp  (21)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 22
	simple_exp  goto 17
	elems  goto 18


state 11
	simple_exp : IDENT .  (6)

	.  reduce 6


state 12
	exp : LET . IDENT EQUAL exp IN exp  (27)
	exp : LET . REC fundef IN exp  (28)
	exp : LET . LPAREN pat RPAREN EQUAL exp IN exp  (32)

	IDENT  shift 23
	REC  shift 24
	LPAREN  shift 25
	.  error


state 13
	exp : ARRAY_CREATE . simple_exp simple_exp  (35)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	LPAREN  shift 14
	.  error

	simple_exp  goto 26


state 14
	simple_exp : LPAREN . exp RPAREN  (1)
	simple_exp : LPAREN . RPAREN  (2)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	RPAREN  shift 27
	FUN  shift 15
	.  error

	exp  goto 28
	simple_exp  goto 17
	elems  goto 18


state 15
	exp : FUN . formal_args RARROW exp  (29)

	IDENT  shift 29
	.  error

	formal_args  goto 30


state 16
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . AST INT  (13)
	exp : exp . SLASH INT  (14)
	exp : exp . EQUAL exp  (15)
	exp : exp . LESS_GREATER exp  (16)
	exp : exp . LESS exp  (17)
	exp : exp . GREATER exp  (18)
	exp : exp . LESS_EQUAL exp  (19)
	exp : exp . GREATER_EQUAL exp  (20)
	exp : exp . PLUS_DOT exp  (23)
	exp : exp . MINUS_DOT exp  (24)
	exp : exp . AST_DOT exp  (25)
	exp : exp . SLASH_DOT exp  (26)
	exp : exp . SEMICOLON exp  (34)
	elems : exp . COMMA exp  (43)
	%entry% : '\001' exp .  (46)

	MINUS  shift 31
	PLUS  shift 32
	AST  shift 33
	SLASH  shift 34
	MINUS_DOT  shift 35
	PLUS_DOT  shift 36
	AST_DOT  shift 37
	SLASH_DOT  shift 38
	EQUAL  shift 39
	LESS_GREATER  shift 40
	LESS_EQUAL  shift 41
	GREATER_EQUAL  shift 42
	LESS  shift 43
	GREATER  shift 44
	COMMA  shift 45
	SEMICOLON  shift 46
	$end  reduce 46


state 17
	simple_exp : simple_exp . DOT LPAREN exp RPAREN  (7)
	exp : simple_exp .  (8)
	exp : simple_exp . actual_args  (30)
	exp : simple_exp . DOT LPAREN exp RPAREN LESS_MINUS exp  (33)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	DOT  shift 47
	LPAREN  shift 14
	$end  reduce 8
	MINUS  reduce 8
	PLUS  reduce 8
	AST  reduce 8
	SLASH  reduce 8
	MINUS_DOT  reduce 8
	PLUS_DOT  reduce 8
	AST_DOT  reduce 8
	SLASH_DOT  reduce 8
	EQUAL  reduce 8
	LESS_GREATER  reduce 8
	LESS_EQUAL  reduce 8
	GREATER_EQUAL  reduce 8
	LESS  reduce 8
	GREATER  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	IN  reduce 8
	COMMA  reduce 8
	SEMICOLON  reduce 8
	RPAREN  reduce 8

	simple_exp  goto 48
	actual_args  goto 49


state 18
	exp : elems .  (31)
	elems : elems . COMMA exp  (42)

	COMMA  shift 50
	$end  reduce 31
	MINUS  reduce 31
	PLUS  reduce 31
	AST  reduce 31
	SLASH  reduce 31
	MINUS_DOT  reduce 31
	PLUS_DOT  reduce 31
	AST_DOT  reduce 31
	SLASH_DOT  reduce 31
	EQUAL  reduce 31
	LESS_GREATER  reduce 31
	LESS_EQUAL  reduce 31
	GREATER_EQUAL  reduce 31
	LESS  reduce 31
	GREATER  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	IN  reduce 31
	SEMICOLON  reduce 31
	RPAREN  reduce 31


state 19
	exp : NOT exp .  (9)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . AST INT  (13)
	exp : exp . SLASH INT  (14)
	exp : exp . EQUAL exp  (15)
	exp : exp . LESS_GREATER exp  (16)
	exp : exp . LESS exp  (17)
	exp : exp . GREATER exp  (18)
	exp : exp . LESS_EQUAL exp  (19)
	exp : exp . GREATER_EQUAL exp  (20)
	exp : exp . PLUS_DOT exp  (23)
	exp : exp . MINUS_DOT exp  (24)
	exp : exp . AST_DOT exp  (25)
	exp : exp . SLASH_DOT exp  (26)
	exp : exp . SEMICOLON exp  (34)
	elems : exp . COMMA exp  (43)

	.  reduce 9


state 20
	exp : MINUS exp .  (10)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . AST INT  (13)
	exp : exp . SLASH INT  (14)
	exp : exp . EQUAL exp  (15)
	exp : exp . LESS_GREATER exp  (16)
	exp : exp . LESS exp  (17)
	exp : exp . GREATER exp  (18)
	exp : exp . LESS_EQUAL exp  (19)
	exp : exp . GREATER_EQUAL exp  (20)
	exp : exp . PLUS_DOT exp  (23)
	exp : exp . MINUS_DOT exp  (24)
	exp : exp . AST_DOT exp  (25)
	exp : exp . SLASH_DOT exp  (26)
	exp : exp . SEMICOLON exp  (34)
	elems : exp . COMMA exp  (43)

	.  reduce 10


state 21
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . AST INT  (13)
	exp : exp . SLASH INT  (14)
	exp : exp . EQUAL exp  (15)
	exp : exp . LESS_GREATER exp  (16)
	exp : exp . LESS exp  (17)
	exp : exp . GREATER exp  (18)
	exp : exp . LESS_EQUAL exp  (19)
	exp : exp . GREATER_EQUAL exp  (20)
	exp : MINUS_DOT exp .  (22)
	exp : exp . PLUS_DOT exp  (23)
	exp : exp . MINUS_DOT exp  (24)
	exp : exp . AST_DOT exp  (25)
	exp : exp . SLASH_DOT exp  (26)
	exp : exp . SEMICOLON exp  (34)
	elems : exp . COMMA exp  (43)

	.  reduce 22


state 22
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . AST INT  (13)
	exp : exp . SLASH INT  (14)
	exp : exp . EQUAL exp  (15)
	exp : exp . LESS_GREATER exp  (16)
	exp : exp . LESS exp  (17)
	exp : exp . GREATER exp  (18)
	exp : exp . LESS_EQUAL exp  (19)
	exp : exp . GREATER_EQUAL exp  (20)
	exp : IF exp . THEN exp ELSE exp  (21)
	exp : exp . PLUS_DOT exp  (23)
	exp : exp . MINUS_DOT exp  (24)
	exp : exp . AST_DOT exp  (25)
	exp : exp . SLASH_DOT exp  (26)
	exp : exp . SEMICOLON exp  (34)
	elems : exp . COMMA exp  (43)

	MINUS  shift 31
	PLUS  shift 32
	AST  shift 33
	SLASH  shift 34
	MINUS_DOT  shift 35
	PLUS_DOT  shift 36
	AST_DOT  shift 37
	SLASH_DOT  shift 38
	EQUAL  shift 39
	LESS_GREATER  shift 40
	LESS_EQUAL  shift 41
	GREATER_EQUAL  shift 42
	LESS  shift 43
	GREATER  shift 44
	THEN  shift 51
	COMMA  shift 45
	SEMICOLON  shift 46
	.  error


state 23
	exp : LET IDENT . EQUAL exp IN exp  (27)

	EQUAL  shift 52
	.  error


state 24
	exp : LET REC . fundef IN exp  (28)

	IDENT  shift 53
	.  error

	fundef  goto 54


state 25
	exp : LET LPAREN . pat RPAREN EQUAL exp IN exp  (32)

	IDENT  shift 55
	.  error

	pat  goto 56


state 26
	simple_exp : simple_exp . DOT LPAREN exp RPAREN  (7)
	exp : ARRAY_CREATE simple_exp . simple_exp  (35)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	DOT  shift 57
	LPAREN  shift 14
	.  error

	simple_exp  goto 58


state 27
	simple_exp : LPAREN RPAREN .  (2)

	.  reduce 2


state 28
	simple_exp : LPAREN exp . RPAREN  (1)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . AST INT  (13)
	exp : exp . SLASH INT  (14)
	exp : exp . EQUAL exp  (15)
	exp : exp . LESS_GREATER exp  (16)
	exp : exp . LESS exp  (17)
	exp : exp . GREATER exp  (18)
	exp : exp . LESS_EQUAL exp  (19)
	exp : exp . GREATER_EQUAL exp  (20)
	exp : exp . PLUS_DOT exp  (23)
	exp : exp . MINUS_DOT exp  (24)
	exp : exp . AST_DOT exp  (25)
	exp : exp . SLASH_DOT exp  (26)
	exp : exp . SEMICOLON exp  (34)
	elems : exp . COMMA exp  (43)

	MINUS  shift 31
	PLUS  shift 32
	AST  shift 33
	SLASH  shift 34
	MINUS_DOT  shift 35
	PLUS_DOT  shift 36
	AST_DOT  shift 37
	SLASH_DOT  shift 38
	EQUAL  shift 39
	LESS_GREATER  shift 40
	LESS_EQUAL  shift 41
	GREATER_EQUAL  shift 42
	LESS  shift 43
	GREATER  shift 44
	COMMA  shift 45
	SEMICOLON  shift 46
	RPAREN  shift 59
	.  error


state 29
	formal_args : IDENT . formal_args  (38)
	formal_args : IDENT .  (39)

	IDENT  shift 29
	EQUAL  reduce 39
	RARROW  reduce 39

	formal_args  goto 60


state 30
	exp : FUN formal_args . RARROW exp  (29)

	RARROW  shift 61
	.  error


state 31
	exp : exp MINUS . exp  (12)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 62
	simple_exp  goto 17
	elems  goto 18


state 32
	exp : exp PLUS . exp  (11)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 63
	simple_exp  goto 17
	elems  goto 18


state 33
	exp : exp AST . INT  (13)

	INT  shift 64
	.  error


state 34
	exp : exp SLASH . INT  (14)

	INT  shift 65
	.  error


state 35
	exp : exp MINUS_DOT . exp  (24)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 66
	simple_exp  goto 17
	elems  goto 18


state 36
	exp : exp PLUS_DOT . exp  (23)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 67
	simple_exp  goto 17
	elems  goto 18


state 37
	exp : exp AST_DOT . exp  (25)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 68
	simple_exp  goto 17
	elems  goto 18


state 38
	exp : exp SLASH_DOT . exp  (26)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 69
	simple_exp  goto 17
	elems  goto 18


state 39
	exp : exp EQUAL . exp  (15)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 70
	simple_exp  goto 17
	elems  goto 18


state 40
	exp : exp LESS_GREATER . exp  (16)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 71
	simple_exp  goto 17
	elems  goto 18


state 41
	exp : exp LESS_EQUAL . exp  (19)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 72
	simple_exp  goto 17
	elems  goto 18


state 42
	exp : exp GREATER_EQUAL . exp  (20)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 73
	simple_exp  goto 17
	elems  goto 18


state 43
	exp : exp LESS . exp  (17)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 74
	simple_exp  goto 17
	elems  goto 18


state 44
	exp : exp GREATER . exp  (18)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 75
	simple_exp  goto 17
	elems  goto 18


state 45
	elems : exp COMMA . exp  (43)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 76
	simple_exp  goto 17
	elems  goto 18


state 46
	exp : exp SEMICOLON . exp  (34)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 77
	simple_exp  goto 17
	elems  goto 18


state 47
	simple_exp : simple_exp DOT . LPAREN exp RPAREN  (7)
	exp : simple_exp DOT . LPAREN exp RPAREN LESS_MINUS exp  (33)

	LPAREN  shift 78
	.  error


state 48
	simple_exp : simple_exp . DOT LPAREN exp RPAREN  (7)
	actual_args : simple_exp .  (41)

	DOT  shift 57
	$end  reduce 41
	BOOL  reduce 41
	INT  reduce 41
	FLOAT  reduce 41
	MINUS  reduce 41
	PLUS  reduce 41
	AST  reduce 41
	SLASH  reduce 41
	MINUS_DOT  reduce 41
	PLUS_DOT  reduce 41
	AST_DOT  reduce 41
	SLASH_DOT  reduce 41
	EQUAL  reduce 41
	LESS_GREATER  reduce 41
	LESS_EQUAL  reduce 41
	GREATER_EQUAL  reduce 41
	LESS  reduce 41
	GREATER  reduce 41
	THEN  reduce 41
	ELSE  reduce 41
	IDENT  reduce 41
	IN  reduce 41
	COMMA  reduce 41
	SEMICOLON  reduce 41
	LPAREN  reduce 41
	RPAREN  reduce 41


state 49
	exp : simple_exp actual_args .  (30)
	actual_args : actual_args . simple_exp  (40)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	LPAREN  shift 14
	$end  reduce 30
	MINUS  reduce 30
	PLUS  reduce 30
	AST  reduce 30
	SLASH  reduce 30
	MINUS_DOT  reduce 30
	PLUS_DOT  reduce 30
	AST_DOT  reduce 30
	SLASH_DOT  reduce 30
	EQUAL  reduce 30
	LESS_GREATER  reduce 30
	LESS_EQUAL  reduce 30
	GREATER_EQUAL  reduce 30
	LESS  reduce 30
	GREATER  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	IN  reduce 30
	COMMA  reduce 30
	SEMICOLON  reduce 30
	RPAREN  reduce 30

	simple_exp  goto 79


state 50
	elems : elems COMMA . exp  (42)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 80
	simple_exp  goto 17
	elems  goto 18


state 51
	exp : IF exp THEN . exp ELSE exp  (21)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 81
	simple_exp  goto 17
	elems  goto 18


state 52
	exp : LET IDENT EQUAL . exp IN exp  (27)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	FUN  shift 15
	.  error

	exp  goto 82
	simple_exp  goto 17
	elems  goto 18

